<package format="3">
  <name>camera_driver</name>
  <version>0.0.0</version>
  <description>Driver de cámara USB con cv_bridge y OpenCV</description>
  <maintainer email="lopezag01@gmail.com">lopezag</maintainer>
  <license>MIT</license>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Dependencias de prueba -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

