<?xml version="1.0"?>
<package format="3">
  <name>pipeline_launch</name>
  <version>0.0.0</version>
  <description>Paquete de lanzamiento para iniciar LiDAR, cámara e IMU en un solo comando</description>
  <maintainer email="lopezag01@gmail.com">lopezag</maintainer>
  <license>Apache-2.0</license>

  <!-- Necesario para ament_python -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>camera_driver</exec_depend>
  <exec_depend>imu_driver</exec_depend>
  <exec_depend>lidar_camera_fusion</exec_depend>

  <!-- Dependencias de prueba y lint -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

